--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -30,7 +30,7 @@
 	            <a class="panel-title" data-toggle="collapse" data-target="#planoEstagio"><i class="fa fa-caret-down" aria-hidden="true"></i> Plano de Estágio</a>
 	          </div>
 	          <div id="planoEstagio" class="panel-body collapse in">
-				  <table th:if="${submissaoPlano != null}" class="table table-hover">
+				  <table th:if="${submissaoPlano} != null" class="table table-hover">
 				    <tbody>
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Documento</strong></td>
@@ -53,10 +53,10 @@
 				  
 		            <div class="gp-modelo-doc">
 		            	Modelo de Plano de Estágio <a href="#">Clique aqui para baixar!</a>
-		            	<span th:if="${submissaoPlano != null}">
+		            	<span th:if="${submissaoPlano} != null">
 		            		<a th:if="${#strings.equals(submissaoPlano.statusEntrega, 'SUBMETIDO')} or ${#strings.equals(submissaoPlano.statusEntrega, 'CORRECAO')}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar Submissão</a>
 		            	</span>
-		            	<a th:if="${submissaoPlano == null}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
+		            	<a th:if="${submissaoPlano} == null" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
 		            </div>    
 	           </div>
 	        </div>
@@ -67,7 +67,7 @@
 				</div>
 
 				<div id="relatorioEstagio" class="panel-body collapse in">
-		            <table th:if="${submissaoRelatorio != null}" class="table table-hover">
+		            <table th:if="${submissaoRelatorio} != null" class="table table-hover">
 				    <tbody>
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Documento</strong></td>
@@ -89,22 +89,99 @@
 				  </table>
 		            <div class="gp-modelo-doc">Modelo de Relatório de Estágio 
 		            	<a href="#">Clique aqui para baixar!</a>
-		            	<span th:if="${submissaoRelatorio != null}">
-		            		<a th:if="${#strings.equals(submissaoRelatorio.statusEntrega, 'SUBMETIDO')} or ${#strings.equals(submissaoRelatorio.statusEntrega, 'CORRECAO')}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar Submissão</a>
+		            	<span th:if="${submissaoRelatorio} != null">
+		            		<a th:if="${#strings.equals(submissaoRelatorio.statusEntrega, 'SUBMETIDO')} or ${#strings.equals(submissaoRelatorio.statusEntrega, 'CORRECAO')}" href="#submissaoRelatorio" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar Submissão</a>
 		            	</span>
-		            	<a th:if="${submissaoRelatorio == null}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
+		            	<a th:if="${submissaoRelatorio} == null" href="#submissaoRelatorio" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
 		            </div>       
 				</div>
 			</div>
 
-	        <div class="panel panel-bluegray">
+     <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-				<a class="panel-title" data-toggle="collapse" data-target="#avaliacaoRendimento"><i class="fa fa-caret-down" aria-hidden="true"></i> Avalição de Rendimento</a>
-	          </div>
-	        
-	          <div id="avaliacaoRendimento" class="panel-body collapse in">
-	            <div>Sua avaliação de rendimento ainda não foi realizada.</div>    
-	          </div>
+	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoRendimento"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Rendimento</a>
+			  </div>
+	        <div id="avaliacaoRendimento" class="panel-body collapse in">
+	         <div class="avaliacao" th:if="${estagio.avaliacaoRendimento != null}">
+	   			<div class="row">
+	         		<div class="col-md-12"><h6>ASSIDUIDADE E DISCIPLINA</h6></div>
+				     <div class="col-md-12">
+				      <strong>Frequência:</strong>
+				      <p th:text="${estagio.avaliacaoRendimento.frequencia != null} ? ${estagio.avaliacaoRendimento.frequencia.descricaoItem} : ' '"></p>
+				      </div>
+				      <div class="col-md-12">
+				      	<strong>Permanência:</strong>
+				      	<p th:text="${estagio.avaliacaoRendimento.permanencia != null} ? ${estagio.avaliacaoRendimento.permanencia.descricaoItem} : ' '"> </p>
+				      </div>
+				      <div class="col-md-12">
+				      	<strong>Disciplina quando ao cumprimento de normas:</strong>
+				      	<p th:text="${estagio.avaliacaoRendimento.disciplina != null} ? ${estagio.avaliacaoRendimento.disciplina.descricaoItem} : ' '"></p>
+				      </div>
+				      <div class="col-md-12">
+				      	<strong>Comentário:</strong>
+				      	<p th:text="${estagio.avaliacaoRendimento.fatorAssuidadeDisciplinaComentario}"></p>
+				      </div>
+			     </div>
+			     <hr/>
+			      <div class="row">
+				      	<div class="col-md-12"><h6 >INICIATIVA E PRODUTIVIDADE</h6></div>
+				      	<div class="col-md-12">
+				      		<strong>Iniciativa:</strong>
+								<p th:text="${estagio.avaliacaoRendimento.iniciativa != null} ? ${estagio.avaliacaoRendimento.iniciativa.descricaoItem} : ' '"></p>
+						 </div>
+				      	<div class="col-md-12">
+				      		<strong>Quantidade de Trabalho:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.quantidadeTrabalho !=null} ? ${estagio.avaliacaoRendimento.quantidadeTrabalho.descricaoItem} : ' '"></p>
+				      	</div>
+				      <div class="col-md-12">
+				      		<strong>Qualidade de Trabalho:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.qualidadeTrabalho != null} ? ${estagio.avaliacaoRendimento.qualidadeTrabalho.descricaoItem} : ' '"></p> 
+				      </div>
+				      <div class="col-md-12">
+				      		<strong>Cumprimento de prazos:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.cumprimentoPrazos  != null} ? ${estagio.avaliacaoRendimento.cumprimentoPrazos.descricaoItem} : ' '"></p>
+			      	  </div>
+			      	   <div class="col-md-12">
+				      	<strong>Comentário:</strong>
+				      	<p th:text="${estagio.avaliacaoRendimento.fatorIniciativaProdutividadeComentario}"></p>
+				      </div>
+			      </div>
+			       <hr/>
+			      <div class="row">
+			      		<div class="col-md-12"><h6 >RESPONSABILIDADE</h6></div>
+				      		<div class="col-md-12">
+				      		<strong>Comprometimento com o trabalho:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.comprometimento != null} ? ${estagio.avaliacaoRendimento.comprometimento.descricaoItem} : ' '"></p>
+				    	  </div>
+				    	  <div class="col-md-12">
+				      		<strong>Cuidado com materiais e equipamentos:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.cuidadoMateriais != null} ? ${estagio.avaliacaoRendimento.cuidadoMateriais.descricaoItem} : ' '"></p>
+				    	  </div>
+				    	 <div class="col-md-12">
+				      		<strong>Comentário:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.fatorResponsabilidadeComentario}"></p>
+				     	 </div>
+			      </div>
+			       <hr/>
+			      <div class="row">
+			      		<div class="col-md-12"><h6>RELACIONAMENTO</h6></div>
+				      	<div class="col-md-12">
+				      		<strong>Relacionamento junto a gerência e demais funcionários:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.relacionamento != null} ? ${estagio.avaliacaoRendimento.relacionamento.descricaoItem} : ' ' "></p>
+				      	</div>
+				      	<div class="col-md-12">
+				      		<strong>Trabalho em equipe:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.trabalhoEquipe != null} ? ${estagio.avaliacaoRendimento.trabalhoEquipe.descricaoItem} : ' '"></p>
+				     	 </div>
+				     	 <div class="col-md-12">
+				      		<strong>Comentário:</strong>
+				      		<p th:text="${estagio.avaliacaoRendimento.fatorRelacionamentoComentario}"></p>
+				     	 </div>
+			     </div>
+			  </div>
+				          		
+		        <a th:href="@{/Supervisor/Turma/Acompanhamento/1#}" class="btn btn-success btn-sm pull-right">Avaliar</a>
+	           </div>
 	        </div>
 	
 	      </div>
@@ -148,15 +225,15 @@
 				    <tbody>
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Situação</strong></td>
-				        <td class="gp-sem-borda">Você está em avaliação.</td>
+				        <td class="gp-sem-borda" th:text="${estagio.situacao.descricao}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Nota</strong></td>
-				        <td>9.5</td>
+				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.nota}"></p> </td>
 				      </tr>
 				      <tr>
 				        <td><strong>Resultado</strong></td>
-				        <td>APROVADO</td>
+				        <td th:inline="text"> <p th:if="${#strings.equals(estagio.situacao, 'CONCLUIDO')}" th:text="${estagio.resultado.descricao}"></p> </td>
 				      </tr>
 				    </tbody>
 				  </table>
@@ -218,33 +295,33 @@
 			         </div>
 			     </div>
 			   </div>
-			</form>
+			   </form>
+		</div>
 			<div th:if="${submissaoPlano} != null" id="submissaoPlano" class="modal">
 			<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/${idEstagio}/EditarPlano}" method="post" enctype="multipart/form-data"> 
-			<div class="modal-dialog">
-			     <div class="modal-content">
-			       <div class="modal-header">
-			         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			         <h4 class="modal-title">Plano de Estágio</h4>
-			       </div>
-			
-			         <div class="modal-body">
-			             <label for="inputArquivo">Plano de Estágio</label><br/>
-			             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="planoEstagio" /> 
-			         </div>
-			         
-			         <div class="modal-footer">
-			           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-			           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
-			         </div>
-			     </div>
-			   </div>
-			</form>
+				<div class="modal-dialog">
+				     <div class="modal-content">
+				       <div class="modal-header">
+				         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				         <h4 class="modal-title">Plano de Estágio</h4>
+				       </div>
+				
+				         <div class="modal-body">
+				             <label for="inputArquivo">Plano de Estágio</label><br/>
+				             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="planoEstagio" /> 
+				         </div>
+				         
+				         <div class="modal-footer">
+				           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+				           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
+				         </div>
+				     </div>
+				   </div>
+				</form>
 			</div>
-		</div>
 
 
-	     <div th:if="${submissaoRelatorio == null}" id="submissaoRelatorio" class="modal">
+	     <div th:if="${submissaoRelatorio} == null" id="submissaoRelatorio" class="modal">
 	     	<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/Estagio/${idEstagio}/SubmeterRelatorio}" method="post" enctype="multipart/form-data">
 			   <div class="modal-dialog">
 			     <div class="modal-content">
