Criação da pagina de vinculos; Ajustes do formulario de adicionar Turma; Ahustes pagina inicial

--- a/aplicacoes/gestao-pessoas/src/main/resources/static/css/gestao-pessoas.css
+++ b/aplicacoes/gestao-pessoas/src/main/resources/static/css/gestao-pessoas.css
@@ -177,3 +177,6 @@ a.btn.gp-btn-opcao:active, a.btn.gp-btn-opcao:visited {
 	text-align: left !important;
 	font-weight: bold;
 }
+tr:nth-child(1) td {
+	border: none !important;
+}
