--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/editar-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/editar-turma.html
@@ -87,4 +87,11 @@
     </div>
     </div>
   </section>
+
+	<section layout:fragment="js">
+		<script type="text/javascript">
+			$("#nova-turma").addClass("active");
+		</script>
+	</section>
+  
 </html>
