--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
@@ -34,21 +34,34 @@
 				  <table class="table table-hover">
 				    <tbody>
 				      <tr>
-				        <td class="gp-sem-borda"><strong>Orientador</strong></td>
-				        <td th:text="${turma.orientador.nome}" class="gp-sem-borda"> bruno</td>
+				        <td><strong>Orientador</strong></td>
+				        <td th:text="${turma.orientador.nome}"> bruno</td>
 				      </tr>
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
-				     	<td  th:inline="text"> <p th:each="sup : ${turma.supervisores}"> [[${sup.nome}]]</p> </td>
+				     	<td  th:inline="text"> <span th:each="sup : ${turma.supervisores}"> [[${sup.nome}]],</span></td>
 
 				      </tr>
 				      <tr>
 				        <td><strong>Período</strong></td>
-				        <td><label th:text="${turma.inicio}"></label>  a <label th:text="${turma.termino}"></label></td>
+				        <td><label th:text="${#dates.format(turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(turma.termino, 'dd/MM/yyyy')}"></label></td>
 				      </tr>
-				      <tr>
-				        <td><strong>Expediente</strong></td>
-				       	<td  th:inline="text"> <p th:each="exp : ${turma.expedientes}"> [[${exp.diaSemana}]] - [[${exp.horaInicio}]] ás [[${exp.horaTermino}]]</p> </td>
+				    </tbody>
+				  </table>
+	           </div>
+	        </div>
+	
+	        <div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title" data-toggle="collapse" data-target="#expedienteTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Expediente da Turma</a>
+				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">adicionar</a>
+  			  </div>
+	          <div id="expedienteTurma" class="panel-body collapse in">
+				  <table class="table table-hover">
+				    <tbody>
+				      <tr th:each="expediente : ${turma.expedientes}">
+				        <td th:inline="text"><strong>[[${expediente.diaSemana.descricao}]]</strong></td>
+				        <td th:inline="text">[[${#dates.format(expediente.horaInicio, 'HH:mm')}]] ás [[${expediente.horaTermino}]]</td>
 				      </tr>
 				    </tbody>
 				  </table>
@@ -62,13 +75,14 @@
 	          </div>
 
 	          <div id="eventos" class="panel-body collapse in">
-	          <ul class="list-group">
-		          <li th:each="evento :${turma.eventos}" class="list-group-item gp-list-group-item">
-		          	<h6 th:text="${evento.titulo}"></h6>
-		          	<p th:inline="text"><strong>[[${evento.inicio}]]</strong>  a <strong>[[${evento.termino}]]</strong> </p>
-		          	
-		          </li>
-	          </ul>
+				  <table class="table table-hover">
+				    <tbody>
+				      <tr th:each="evento :${turma.eventos}">
+				        <td><strong th:text="${evento.titulo}"></strong></td>
+				        <td th:inline="text">[[${#dates.format(evento.inicio, 'dd/MM/yyyy')}]] a [[${#dates.format(evento.termino, 'dd/MM/yyyy')}]]</td>
+				      </tr>
+				    </tbody>
+				  </table>
 	           </div>
 	        </div>
 	      </div>
@@ -81,15 +95,14 @@
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">mapa frequência</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">termos</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">declarações</a>
+				<a th:href="@{/Supervisor/Turma/{id}/AtualizarVinculos(id=${turma.id})}" class="btn btn-xs pull-right gp-btn-opcao">Atualizar Vínculos</a>
 	          </div>
 	          <div id="estagiarios" class="panel-body collapse in">
 		          <ul class="list-group">
-
 		            <li th:each="est :${turma.estagios}" class="list-group-item gp-list-group-item">
 		              <b th:inline="text"> [[${est.estagiario.nomeCompleto}]] </b>
 		              <a th:href="@{/Supervisor/Turma/Acompanhamento/{id}(id=${est.estagiario.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">acompanhamento</a>
 		            </li>
-		            
 		          </ul>
 
 	           </div>
