--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-turma.html
@@ -72,6 +72,18 @@
 						        <input type="text" class="form-control" id="" placeholder="Nome" />
 						      </div>
 						    </div>
+
+						   <div class="form-group">
+						      <label for="" class="col-md-2 control-label">Tipo</label>
+						      <div class="col-md-10">
+						        <select class="form-control" id="select">
+						          <option></option>
+						          <option>NPI</option>
+						          <option>EMPRESA</option>
+						        </select>
+						      </div>
+						    </div>
+
 						   <div class="form-group">
 						      <label for="" class="col-md-2 control-label">Status</label>
 						      <div class="col-md-10">
