--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/vinculos-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/vinculos-turma.html
@@ -56,7 +56,7 @@
 	    <div class="col-md-8">
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title"><i class="fa fa-caret-down" aria-hidden="true"></i> Atualizar Vínculos</a>
+	            <a class="panel-title"><i class="fa fa-caret-down" aria-hidden="true"></i> Vincular novos estagiários</a>
 	          </div>
 	          <div id="vinculos" class="panel-body">
 
@@ -77,12 +77,25 @@
 			          <ul class="list-group">
 			            <li th:each="est :${turma.estagios}" class="list-group-item gp-list-group-item">
 			              <b th:inline="text"> [[${est.estagiario.nomeCompleto}]] </b>
-			              <a th:href="@{/Supervisor/Turma/Acompanhamento/{id}/Desvincular(id=${est.estagiario.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">desvincular</a>
+			              <a th:href="@{/Supervisor/Turma/Acompanhamento/{id}/Desvincular(id=${est.estagiario.id})}" class="btn btn-primary btn-sm pull-right gp-btn-acompanhamento">vincular</a>
 			            </li>
 			            
 			          </ul>
 				  </div>
+	           </div>
+	        </div>
 
+	        <div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiários da Turma</a>
+	          </div>
+	          <div id="vinculos" class="panel-body">
+		          <ul class="list-group">
+		            <li th:each="est :${turma.estagios}" class="list-group-item gp-list-group-item">
+		              <b th:inline="text"> [[${est.estagiario.nomeCompleto}]] </b>
+		              <a th:href="@{/Supervisor/Turma/Acompanhamento/{id}/Desvincular(id=${est.estagiario.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">desvincular</a>
+		            </li>
+		          </ul>
 	           </div>
 	        </div>
 	      </div>
