Breadcrumbs foram atualizadas e erros de português corrigidos.

--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -13,9 +13,8 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Minhas Turmas</a></li>
-            <li><a href="#">Detalhes Turma</a></li>
-            <li class="active">Acompanhamento Estágiario</li>
+            <li><a th:href="@{/Estagiario}">Minhas Turmas</a></li>
+            <li class="active">Acompanhamento Estagiário</li>
         </ul>
         <h1>Acompanhamento</h1>
     </div>
@@ -180,7 +179,6 @@
 			     </div>
 			  </div>
 				          		
-		        <a th:href="@{/Supervisor/Turma/Acompanhamento/1#}" class="btn btn-success btn-sm pull-right">Avaliar</a>
 	           </div>
 	        </div>
 	
