--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-turma.html
@@ -52,7 +52,7 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Nova Turma</a></li>
+            <li class="active">Nova Turma</li>
         </ul>
         <h1>Nova Turma</h1>
     </div>
