--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
@@ -14,8 +14,8 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Minhas Turmas</a></li>
-            <li><a href="#">Detalhes Turma</a></li>
+            <li><a th:href="@{/Supervisor}">Minhas Turmas</a></li>
+            <li class="active">Detalhes Turma</li>
         </ul>
         <h1>Detalhes da Turma</h1>
     </div>
@@ -91,7 +91,7 @@
 	    <div class="col-md-8">
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#estagiarios"><i class="fa fa-caret-down" aria-hidden="true"></i> Estágiarios</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#estagiarios"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiários</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">mapa frequência</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">termos</a>
 				<a href="#" class="btn btn-xs pull-right gp-btn-opcao">declarações</a>
