--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/list-turmas.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/list-turmas.html
@@ -13,7 +13,7 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Inicio</a></li>
+            <li class="active">Inicio</li>
         </ul>
         <h1>Minhas Turmas</h1>
     </div>
