--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/vinculos-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/vinculos-turma.html
@@ -14,8 +14,8 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Minhas Turmas</a></li>
-            <li><a href="#">Detalhes Turma</a></li>
+            <li><a th:href="@{/Supervisor}">Minhas Turmas</a></li>
+            <li class="active">Detalhes Turma</li>
         </ul>
         <h1>Detalhes da Turma</h1>
     </div>
