--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
@@ -13,10 +13,10 @@
 	<div class="container-fluid titulo-pagina">
     	<div class="container">
 	        <ul class="breadcrumb">
-	            <li><a href="#">Minhas Turmas</a></li>
-	            <li><a href="#">Turma</a></li>
-	            <li><a th:href="@{/Supervisor/Turma/Acompanhamento/1}">Acompanhamento Estágiario</a></li>
-	            <li><a th:href="@{/Supervisor/Turma/Acompanhamento/1/AvaliarPlano}">Avaliação do Plano</a></li>
+	            <li><a th:href="@{/Supervisor}">Minhas Turmas</a></li>
+	            <li><a th:href="@{'/Supervisor/Turma/' + ${estagio.turma.id}}">Detalhes Turma</a></li>
+	            <li><a th:href="@{'/Supervisor/Turma/Acompanhamento/' + ${estagio.estagiario.id}}">Acompanhamento Estagiário</a></li>
+	            <li class="active">Avaliação do Plano</li>
 	        </ul>
         	<h1>Avaliação do Plano</h1>
     	</div>
@@ -27,7 +27,7 @@
 	    	<div class="col-md-4">
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estágiario</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiário</a>
 			  </div>
 	          <div id="estagiario" class="panel-body collapse in">
 	          	<table class="table table-hover">
