--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-rendimento.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-rendimento.html
@@ -14,8 +14,10 @@
   <div class="container-fluid titulo-pagina">
     <div class="container">
         <ul class="breadcrumb">
-            <li><a href="#">Minhas Turmas</a></li>
-            <li><a href="#">Detalhes Turma</a></li>
+            <li><a th:href="@{/Supervisor/}" >Minhas Turmas</a></li>
+            <li><a th:href="@{'/Supervisor/Turma/' + ${estagio.turma.id}}" >Detalhes Turma</a></li>
+            <li><a th:href="@{'/Supervisor/Turma/Acompanhamento/' + ${estagio.estagiario.id}}">Acompanhamento Estagiário</a></li>
+            <li class="active">Avaliação de Rendimento</li>
         </ul>
         <h1>Avaliação de Rendimento</h1>
     </div>
@@ -57,7 +59,7 @@
 	
 	            <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estágiario</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiário</a>
 			  </div>
 	          <div id="estagiario" class="panel-body collapse in">
 	          	<table class="table table-hover">
