--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/list-turmas.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/list-turmas.html
@@ -9,31 +9,45 @@
 </head>
 
 <section layout:fragment="conteudo">
+
+  <div class="container-fluid titulo-pagina">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="#">Minhas Turmas</a></li>
+        </ul>
+        <h1>Minhas Turmas</h1>
+    </div>
+  </div>
+
 	<div class="container animated fadeInRight"> 
     <div class="row">
-  		<div class="col-sm-12">
-			<h3 class="gp-titulo-h5">minhas turmas</h3>
-		</div>
-
     <div class="col-sm-12">
       <div class="panel panel-default">
         <div id="painelPlano" class="panel-body gp-panel-body-background">
           <ul class="list-group">
-            <li class="list-group-item gp-list-group-item">
-              <b> NPI-Manhã 2016.1 <span class="label label-primary">Aberta</span></b>
+            <li class="list-group-item gp-list-group-item" th:each= "estagio: ${estagios}">
+              <b th:inline="text">[[${estagio.value.turma.nome}]] [[${estagio.value.turma.semestre}]]</b> 
               <a th:href="@{/Estagiario/Acompanhamento/1/}" class="btn btn-info btn-sm pull-right gp-btn-acompanhamento">Acompanhamento</a>
-              <a href="#" class="btn btn-success btn-sm pull-right gp-btn-presenca">Estou Presente</a>
-            </li>
-            <li class="list-group-item gp-list-group-item">
-              <b> NPI-Manhã 2016.1 <span class="label label-success">Concluída</span></b>
-              <a th:href="@{/Estagiario/Acompanhamento/1/}" class="btn btn-info btn-sm pull-right gp-btn-acompanhamento">Acompanhamento</a>
-              <a href="#" class="btn btn-success btn-sm pull-right gp-btn-presenca">Estou Presente</a>
-            </li>
-            <li class="list-group-item gp-list-group-item">
-              <b> NPI-Manhã 2016.1 <span class="label label-danger">Fechada</span></b>
-              <a th:href="@{/Estagiario/Acompanhamento/2/}" class="btn btn-info btn-sm pull-right gp-btn-acompanhamento">Acompanhamento</a>
+              <a href="#" class="btn btn-success btn-sm pull-right gp-btn-presenca" th:if="${estagio.key}">Estou Presente</a>
             </li>
           </ul>
+          <table>
+          	<thead>
+          	</thead>
+          	
+          	<tbody>
+          	<tr >
+          	<td></td>
+          	
+          	
+          	
+          	</tr>
+          	
+          	
+          	</tbody>
+          	
+          
+          </table>
         </div>
       </div>
     </div>
