--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-paper.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/animate.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/gestao-pessoas.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datepicker.css}"/>
 </head>
 <body >
 	<nav class="navbar navbar-default">
@@ -46,6 +47,7 @@
 
   	<script th:src="@{/js/jquery-2.2.3.min.js}"></script>
 	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.js}"></script>
 	<script th:src="@{/js/jquery.mask.min.js}"></script>
 	<script th:src="@{/js/localization/messages_pt_BR.min.js}"></script>
 	<script th:src="@{/js/jquery.validate.min.js}"></script>
