--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/list-turmas.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/list-turmas.html
@@ -27,27 +27,10 @@
           <ul class="list-group">
             <li class="list-group-item gp-list-group-item" th:each= "estagio: ${estagios}">
               <b th:inline="text">[[${estagio.value.turma.nome}]] [[${estagio.value.turma.semestre}]]</b> 
-              <a th:href="@{/Estagiario/Acompanhamento/1/}" class="btn btn-info btn-sm pull-right gp-btn-acompanhamento">Acompanhamento</a>
-              <a href="#" class="btn btn-success btn-sm pull-right gp-btn-presenca" th:if="${estagio.key}">Estou Presente</a>
+              <a th:href="@{/Estagiario/Acompanhamento/{idEstagio}(idEstagio=${estagio.value.id})}" class="btn btn-info btn-sm pull-right gp-btn-acompanhamento">Acompanhamento</a>
+              <a th:href="@{/Estagiario/Acompanhamento/{idEstagio}/Presenca(idEstagio=${estagio.value.id})}" class="btn btn-success btn-sm pull-right gp-btn-presenca" th:if="${estagio.key}">Estou Presente</a>
             </li>
           </ul>
-          <table>
-          	<thead>
-          	</thead>
-          	
-          	<tbody>
-          	<tr >
-          	<td></td>
-          	
-          	
-          	
-          	</tr>
-          	
-          	
-          	</tbody>
-          	
-          
-          </table>
         </div>
       </div>
     </div>
